Fixes spacing on hamburger when menu open

--- a/src/components/Header/Navigation/styles.scss
+++ b/src/components/Header/Navigation/styles.scss
@@ -45,7 +45,6 @@
                 transition: all 0.5s ease-in-out;
 
                 &.open {
-                    transform: translateX(-2rem);
                     width: 60px;
                     height: 27px;
                 }
